--- a/packages.config
+++ b/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net46" />
+  <package id="bootbox" version="4.3.0" targetFramework="net46" />
   <package id="bootstrap" version="3.4.1" targetFramework="net46" />
   <package id="BouncyCastle" version="1.8.5" targetFramework="net46" />
   <package id="Google.Protobuf" version="3.19.4" targetFramework="net46" />
@@ -28,5 +29,6 @@
   <package id="System.Buffers" version="4.5.1" targetFramework="net46" />
   <package id="System.Memory" version="4.5.4" targetFramework="net46" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="5.0.0" targetFramework="net46" />
+  <package id="toastr" version="2.1.1" targetFramework="net46" />
   <package id="WebGrease" version="1.6.0" targetFramework="net46" />
 </packages>
