Fixed the Leave History bugs

--- a/.gitignore
+++ b/.gitignore
@@ -361,3 +361,5 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+/Upload/USER_001/Golden_ Retriever.jpg
+/ViewModels/SummaryViewModel.vb
