Added Summary Logic

--- a/LMS.vbproj
+++ b/LMS.vbproj
@@ -215,8 +215,10 @@
     <Compile Include="Controllers\AdminController.vb" />
     <Compile Include="Controllers\api\AdminController.vb" />
     <Compile Include="Controllers\api\HistoryController.vb" />
+    <Compile Include="Controllers\api\SummaryController.vb" />
     <Compile Include="Controllers\api\UserInfoController.vb" />
     <Compile Include="Controllers\HistoryController.vb" />
+    <Compile Include="Controllers\SummaryController.vb" />
     <Compile Include="Controllers\UserInfoController.vb" />
     <Compile Include="Data_Tier\d_Admin.vb" />
     <Compile Include="Data_Tier\d_Admin_Interface.vb" />
@@ -528,6 +530,7 @@
     <Content Include="Views\History\History_List.vbhtml" />
     <Content Include="Views\History\History_Details.vbhtml" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
+    <Content Include="Views\Summary\Summary_List.vbhtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="favicon.ico" />
